--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -7,7 +7,7 @@
 <body>
     <div class="landing-view">
         <div class="logo-container">
-            <div class="qd-chars">Qd</div>
+            <div class="qd-chars">qd</div>
             <div class="lodash-underlogo"></div>
         </div>
     </div>
